<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drinksy</string>
    <string name="label_sessionStartTime">Started at 7:30pm</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_session_limit">Set your limit</string>
    <string name="title_activity_session">SessionActivity</string>
    <string name="button_start">Start drinking session</string>
    <string name="label_activities">Past Sessions</string>
    <string name="label_limit">What is your drink limit?</string>
    <string name="switch_no">No</string>
    <string name="switch_yes">Yes</string>
    <string name="label_food">Did you have food yet?</string>
    <string name="button_proceedToSession">Proceed to session</string>
    <string name="button_addDrink">Finished a drink</string>
    <string name="label_sessionActivity">Activity</string>
    <string name="label_remainingDrinks">remaining</string>
    <string name="label_timeDuration">Time to next drink</string>
    <string name="action_endSession">End session</string>
    <string name="button_resume">Resume drinking session</string>
    <string name="dialog_end_session_prompt">Would you like to end your session?</string>
    <string name="dialog_confirm_positive">Yes</string>
    <string name="dialog_confirm_negative">No</string>
    <string name="dialog_confirm_overlimit">Ok</string>
    <string name="action_editLimit">Edit limit</string>
    <string name="title_activity_session_summary">SessionSummaryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_delete">Delete session</string>
    <string name="label_session_deleted">Session deleted</string>
    <string name="empty_sessions">There are no sessions at the moment</string>
    <string name="empty_sessions_suggestion">Try starting a new session</string>
    <string name="empty_sessions_summary">Nothing happened this session</string>
    <string name="empty_activities">Keep track of your finished drinks here</string>
    <string name="empty_activities_water">Pace your night by drinking some water</string>
    <string name="empty_activities_water_tip">(Water helps you stay hydrated and reduces the time for your next drink)</string>
    <string name="label_over_nextdrinktime">over</string>
    <string name="action_water">Add water</string>
    <string name="action_details">View details</string>
    <string name="dialog_add_water_prompt">Would you like to drink some water?</string>
    <string name="label_activityStatus"></string>
    <string name="label_sessionSummary">May 08 2014 - 4hr session</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_share">Share via</string>
    <string name="title_activity_past_session">Past Sessions</string>
    <string name="button_past_sessions">History</string>

</resources>
