<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffF4C676"
    tools:context="com.lifeofmle.drinksy.app.activities.SessionLimitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/TextForegroundColor"
            android:textSize="18dp"
            android:text="@string/label_limit"/>

        <TextView
            android:id="@+id/label_limitCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/TextForegroundColor"
            android:textSize="60dp"
            android:layout_margin="20dp"
            android:text="0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_subtract"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:textSize="50dp"
                android:background="@color/ProgressColor"
                android:textColor="@color/ProgressForegroundColor"
                android:text="-"
                android:onClick="onSubtractLimit"/>
            <Button
                android:id="@+id/button_add"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:textSize="50dp"
                android:background="@color/ProgressColor"
                android:textColor="@color/ProgressForegroundColor"
                android:text="+"
                android:onClick="onAddLimit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_food"/>


            <Switch
                android:gravity="top"
                android:id="@+id/switch_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textOff="@string/switch_no"
                android:textOn="@string/switch_yes"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/ProgressColor"
                android:textColor="@color/ProgressForegroundColor"
                android:text="@string/button_proceedToSession"
                android:onClick="executeProceed"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
