<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lifeofmle.drinksy.app.activities.SessionActivity"
    android:parentActivityName="com.lifeofmle.drinksy.app.activities.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/panel_overlimit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/OverlimitBackgroundColor"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_error"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:layout_marginLeft="3dp"
                    android:layout_gravity="center_vertical"
                    android:text="You went over your limit"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/ProgressColor">

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffF4C676">
                <com.lifeofmle.drinksy.app.components.VerticalProgressBar
                    android:id="@+id/progressBar_limit"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="10dp"
                    android:progressDrawable="@drawable/vertical_progress"/>
                <com.lifeofmle.drinksy.app.components.ProgressWheel
                    android:id="@+id/progressWheel_timer"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="100dp"
                    app:contourColor="#ffffff"
                    app:rimColor="@color/ProgressForegroundColor"
                    app:barLength="60dp"
                    app:barColor="@color/ProgressForegroundColor"
                    app:barWidth="10dp"
                    app:rimWidth="5dp"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/label_remainingCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#ff4e4c54"
                        android:text="0"
                        android:textSize="60dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="-10dp"
                        android:textColor="#ff4e4c54"
                        android:textSize="15dp"
                        android:text="@string/label_remainingDrinks"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_marginBottom="13dp"
                    android:gravity="center_horizontal|bottom">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="-5dp"
                        android:textSize="12dp"
                        android:textColor="#ff4e4c54"
                        android:text="@string/label_timeDuration"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/label_remainingTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"
                            android:textColor="#ff4e4c54"
                            android:text="50"/>
                        <TextView
                            android:id="@+id/label_remainingTimeUnit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"
                            android:layout_marginLeft="3dp"
                            android:textColor="#ff4e4c54"
                            android:text="mins"/>
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffF4C676">

            <Button
                android:id="@+id/button_addDrink"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:background="@color/ProgressColor"
                android:textColor="@color/ProgressForegroundColor"
                android:textSize="22dp"
                android:text="@string/button_addDrink"
                android:onClick="onAddDrink"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="#2c2c2c" >

            <TextView
                android:text="@string/label_sessionActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:layout_margin="5dp"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/label_start"
                android:text="@string/label_sessionStartTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:layout_margin="5dp"
                android:textColor="#ffffff" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listview_activity"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                >

            </ListView>

            <RelativeLayout
                android:id="@+id/layout_empty_activities"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="90dp"
                    android:text="@string/empty_activities" />
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="2dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/empty_activities_water" />

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:gravity="center_vertical|center_horizontal"
                        android:src="@drawable/water"/>

                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:width="100dp"
                    android:layout_marginTop="40dp"
                    android:textSize="10dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/empty_activities_water_tip" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
